--- a/app/views/index.html
+++ b/app/views/index.html
@@ -365,6 +365,14 @@
                         </li>
                     </ul>
 
+                    <h3 class="govuk-heading-s">Useful links</h3>
+
+                    <ul class="govuk-list">
+                        <li>
+                            <a class="govuk-link" href="/public/files/discussion/sign-up-sign-in-add-organisation-find-specific-user.ppt">Discussion guide</a>
+                        </li>
+                    </ul>
+
                     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
                     <time datetime="2019-11-11" class="govuk-caption-m">11 November 2019</time>
