--- a/app/views/v6/l4/users/register/password.html
+++ b/app/views/v6/l4/users/register/password.html
@@ -39,12 +39,13 @@
                         <li>one upper case letter</li>
                         <li>one lower case letter</li>
                         <li>one number</li>
-                        <li>one of these special characters: @ # $ % ^ & * - _ ! + = [ ] { } | \ : ‘ , . ? / ` ~ " ( ) ;</li>
+                        <li>one special character</li>
                     </ul>
 
-                    <p>
-                        It cannot include special characters that are not on this list.
-                    </p>
+                    {{ govukDetails({
+                        summaryText: "Which special characters can I use?",
+                        html: 'You can use the following special characters: @ # $ % ^ & * - _ ; ! + = [ ] { } | \ : ‘ , . ? / ` ~ " ( ) '
+                      }) }}
 
                     <div class="govuk-form-group govuk-!-margin-top-6">
                         <label class="govuk-label" for="txt_tpas_password">
