--- a/app/views/v7/l2-authoriser/requests/view/single-new-user.html
+++ b/app/views/v7/l2-authoriser/requests/view/single-new-user.html
@@ -66,7 +66,7 @@
                             text: "Permissions"
                         },
                         value: {
-                            text: "Organisation Admin"
+                            text: "Organisation admin"
                         }
                     },
                     {
